Fachada de Servicios

--- a/Web.Debug.config
+++ b/Web.Debug.config
@@ -2,10 +2,10 @@
 
 <!-- Para obtener más información sobre cómo usar la transformación de web.config, visite https://go.microsoft.com/fwlink/?LinkId=125889 -->
 
-<configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform">
-  <!--
-    En el ejemplo siguiente, la transformación "SetAttributes" cambiará el valor de    "connectionString" para que solamente use "ReleaseSQLServer" cuando el localizador "Match"    encuentre un atributo "name" con el valor "MyDB".    <connectionStrings>     <add name="MyDB".        connectionString="Data Source=ReleaseSQLServer;Initial Catalog=MyReleaseDB;Integrated Security=True"        xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>    </connectionStrings>
-  -->
+<configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform"> 
+  <appSettings>
+    <add key="OracleDB" value="User Id=hclp_admin;Password=your_secure_password;Data Source=HCLP_DEV;" />
+  </appSettings>
   <system.web>
     <!--
       En el ejemplo siguiente, la transformación "Replace" reemplazará toda la 
