--- a/Web.Release.config
+++ b/Web.Release.config
@@ -3,12 +3,11 @@
 <!-- Para obtener más información sobre cómo usar la transformación de web.config, visite https://go.microsoft.com/fwlink/?LinkId=125889 -->
 
 <configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform">
-  <!--
-    En el ejemplo siguiente, la transformación "SetAttributes" cambiará el valor de    "connectionString" para que solamente use "ReleaseSQLServer" cuando el localizador "Match"    encuentre un atributo "name" con el valor "MyDB".    <connectionStrings>     <add name="MyDB".        connectionString="Data Source=ReleaseSQLServer;Initial Catalog=MyReleaseDB;Integrated Security=True"        xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>    </connectionStrings>
-  -->
-  <system.web>
-    <compilation xdt:Transform="RemoveAttributes(debug)" />
-    <!--
+	<appSettings>
+		<add key="OracleDB" value="User Id=hclp_admin;Password=your_secure_password;Data Source=HCLP_DEV;" />
+	</appSettings>
+	<system.web>
+		<!--
       En el ejemplo siguiente, la transformación "Replace" reemplazará toda la 
       sección <customErrors> del archivo web.config.
       Tenga en cuenta que, como solo hay una sección customErrors bajo el nodo 
@@ -19,5 +18,5 @@
         <error statusCode="500" redirect="InternalError.htm"/>
       </customErrors>
     -->
-  </system.web>
+	</system.web>
 </configuration>
