--- a/Web.config
+++ b/Web.config
@@ -5,6 +5,9 @@
   https://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+  <appSettings>
+	<add key="OracleDB" value="User Id=hclp_admin;Password=your_secure_password;Data Source=HCLP_DEV;" />
+  </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2"/>
     <httpRuntime targetFramework="4.7.2"/>
@@ -19,5 +22,4 @@
         warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+"/>
     </compilers>
   </system.codedom>
-
 </configuration>
