Configurar pagina de inicio

--- a/Web.config
+++ b/Web.config
@@ -22,4 +22,17 @@
         warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+"/>
     </compilers>
   </system.codedom>
+  <system.webServer>
+	<defaultDocument>
+	  <files>
+		<remove value="default.aspx" />
+		<remove value="iisstart.htm" />
+		<remove value="index.html" />
+		<remove value="index.htm" />
+		<remove value="Default.asp" />
+		<remove value="Default.htm" />
+		<add value="Fachada.asmx" />
+	  </files>
+	</defaultDocument>
+  </system.webServer>
 </configuration>
