--- a/Web.config
+++ b/Web.config
@@ -11,6 +11,13 @@
   <system.web>
     <compilation debug="true" targetFramework="4.7.2"/>
     <httpRuntime targetFramework="4.7.2"/>
+	<webServices>
+	  <protocols>
+		<add name="HttpSoap" />
+		<add name="HttpPost" />
+		<add name="HttpGet" />
+	  </protocols>
+	</webServices>	  
   </system.web>
   <system.codedom>
     <compilers>
